--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Alwayne Bailey And Kasper Pawlowski",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mongoose": "^6.0.8",
