--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Alwayne Bailey And Kasper Pawlowski",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.23.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
-    "mongoose": "^6.0.8",
-    "socket.io": "^4.2.0"
+    "mongoose": "^6.0.11",
+    "react-router-dom": "^5.3.0",
+    "socket.io": "^4.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
